--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"dotenv": "^8.2.0",
 		"express": "^5.0.0-alpha.2",
 		"mongodb": "^4.0.1",
-		"mongoose": "^5.13.4"
+		"mongoose": "^5.13.4",
+		"morgan": "^1.10.0"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
